<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_marginTop="@dimen/_2sdp"
        android:padding="@dimen/_8sdp"
        android:text="Saved"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/text_color"
        android:background="@drawable/round_rectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/txtSaved"/>

    <RelativeLayout

        android:elevation="@dimen/_5sdp"
        android:id="@+id/savedThoughtBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/round_rectangle1"
        app:layout_constraintTop_toBottomOf="@id/txtSaved">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/thoughtsText"
            android:textColor="@color/text_color"
            android:textSize="24sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/savedProverbBtn"
        android:elevation="@dimen/_5sdp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/round_rectangle1"
        app:layout_constraintTop_toBottomOf="@id/txtSaved">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/proverbsText"
            android:textColor="@color/text_color"
            android:textSize="24sp" />



    </RelativeLayout>


    <RelativeLayout
        android:elevation="@dimen/_5sdp"
        android:id="@+id/SavedWordsBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/round_rectangle1"
        app:layout_constraintTop_toBottomOf="@id/savedThoughtBtn">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/wordsText"
            android:textColor="@color/text_color"
            android:textSize="24sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/savedJokesBtn"
        android:elevation="@dimen/_5sdp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/round_rectangle1"
        app:layout_constraintTop_toBottomOf="@id/savedThoughtBtn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/jokesText"
            android:textColor="@color/text_color"
            android:textSize="24sp" />



    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>