<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/btnSaveChanges"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="@dimen/_16sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/round_rectangle"
        android:text="Save\nChanges"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/text_color"/>

    <TextView
        android:background="@drawable/round_rectangle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/perDayNoteText"
        app:layout_constraintBottom_toBottomOf="@id/btnSaveChanges"
        app:layout_constraintTop_toTopOf="@id/btnSaveChanges"
        android:padding="@dimen/_8sdp"
        android:text="Per Day Notifications"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:background="@drawable/round_rectangle1"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/thoughtTxt"
        app:layout_constraintTop_toBottomOf="@id/perDayNoteText"
        android:padding="@dimen/_8sdp"
        android:text="@string/thoughtsText"
        android:textSize="@dimen/_24sdp"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/thoughtsNoteChooser"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/thoughtTxt">

        <TextView
            android:id="@+id/thoughtsNoteChooserMinus"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/round_rectangle"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_48sdp"
            android:text="-"/>

        <TextView
            android:id="@+id/thoughtsNoteChooserNo"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_48sdp"
            android:text="0"/>

        <TextView
            android:id="@+id/thoughtsNoteChooserPlus"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/round_rectangle"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_48sdp"
            android:text="+"/>

    </LinearLayout>

    <TextView
        android:background="@drawable/round_rectangle1"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/proverbsTxt"
        app:layout_constraintTop_toBottomOf="@id/thoughtsNoteChooser"
        android:padding="@dimen/_8sdp"
        android:text="@string/proverbsText"
        android:textSize="@dimen/_24sdp"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/proverbNoteChooser"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/proverbsTxt">

        <TextView
            android:id="@+id/proverbsNoteChooserMinus"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/round_rectangle"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_48sdp"
            android:text="-"/>

        <TextView
            android:id="@+id/proverbsNoteChooserNo"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_48sdp"
            android:text="0"/>

        <TextView
            android:id="@+id/proverbsNoteChooserPlus"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/round_rectangle"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_48sdp"
            android:text="+"/>

    </LinearLayout>


    <TextView
        android:background="@drawable/round_rectangle1"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/jokesTxt"
        app:layout_constraintTop_toBottomOf="@id/proverbNoteChooser"
        android:padding="@dimen/_8sdp"
        android:text="@string/jokesText"
        android:textSize="@dimen/_24sdp"
        android:textColor="@color/text_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/jokesNoteChooser"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/jokesTxt">

        <TextView
            android:id="@+id/jokesNoteChooserMinus"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/round_rectangle"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_48sdp"
            android:text="-"/>

        <TextView
            android:id="@+id/jokesNoteChooserNo"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_48sdp"
            android:text="0"/>

        <TextView
            android:id="@+id/jokesNoteChooserPlus"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/round_rectangle"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_48sdp"
            android:text="+"/>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>